# tombexcavator

./: .gitignore  .gitmodules  CMakeLists.txt  ProjectHome.md  conanfile.txt  configure.h.in
attic/providers/: CMakeLists.txt  fat_based_fs.hh  in_mem_file_ops.hh  read_only_fs.cc  read_only_fs.hh
attic/providers/archon_ultra/: archon_ultra.cc  main.cc
attic/providers/mystic_towers/: CMakeLists.txt  main.cc  mystic_towers.cc  mystic_towers.hh  mystic_towers_fs.cc
attic/providers/stargunner/: CMakeLists.txt  main.cc  stargunner.cc  stargunner.hh  stargunner_fs.cc
ext/: CMakeLists.txt
ext/argagg/: CMakeLists.txt
ext/bsw/: CMakeLists.txt
ext/dlfcn-win32/: CMakeLists.txt
ext/doctest/: CMakeLists.txt
ext/endian/: CMakeLists.txt
ext/libaom/: CMakeLists.txt
ext/libogg/: CMakeLists.txt
ext/libopus/: CMakeLists.txt
ext/libvorbis/: CMakeLists.txt
ext/linenoise/: CMakeLists.txt
ext/mio/: CMakeLists.txt
ext/pfr/: CMakeLists.txt
ext/vfs/: CMakeLists.txt
ext/yasm/: CMakeLists.txt
ext/zlib-ng/: CMakeLists.txt
src/archive/: CMakeLists.txt  archive.cc  archive.hh  archive_config.h.in  byte_order.hh  canvas.cc  canvas.hh  exceptions.cc  exceptions.hh  io.cc  io.hh  output.cc  output.hh  palette.cc  palette.hh  single_file_archive.hh  tile_sheet.cc  tile_sheet.hh
src/archive/explode/: exe_file.cc  exe_file.hh  knowledge_dynamics.cc  knowledge_dynamics.hh  struct_reader.hh  unexepack.cc  unlzexe.cc  unpklite.cc
src/bsw/: CMakeLists.txt  ascii.cc  bsw_api.hpp  exceptions.cc  string_tokenizer.cc  whereami.cc
src/bsw/err/: err.hpp  throw.hpp
src/bsw/fs/: file.cpp  file.hpp
src/bsw/guard/: enforce.hpp
src/bsw/io/: base64.cc  binary_reader.cc  binary_writer.cc  input_stream_decorator.cpp  input_stream_decorator.hpp  ios.cpp  ios_init.hh  memory_stream_buf.cc
src/bsw/logger/: abstract_printer.cpp  abstract_printer.hpp  console.cpp  device.cpp  device.hpp  file_device.hpp  formatter.hpp  function_name.hpp  layout.cpp  layout_commands.hpp  level.cpp  level.hpp  log_record_layout.cpp  predicate.cpp  predicate.hpp  record.cpp  simple_printer.cpp  simple_printer.hpp  system.cpp  system.hpp
src/bsw/mt/: atomic.cpp  atomic.hpp  event.cpp  event.hpp  mutex.hpp  os_config.hpp  queue.hpp
src/bsw/ptr/: ptr_counter.hpp  shared_ptr.hpp
src/bsw/time/: time.cpp  time.hpp
src/extractor/: CMakeLists.txt  extractor.cc
src/formats/: CMakeLists.txt  exceptions.cc  exceptions.hh
src/formats/explode/: explode_exe_file.cc
src/formats/iff/: fourcc.cc  iff_events.cc
src/formats/image/: bmp.hh  gif.hh  lbm.cc  pcx.cc  pcx.hh  picture.cc  picture.hh  picture_loader.cc  picture_loader.hh  stbi_wrapper.cc  tga.hh
src/formats/io/: input.cc  input.hh  io.cc  io.hh  io_base.cc  io_base.hh  output.cc  output.hh
src/formats/mzexplode/: exe_file.cc  exe_file.hh  knowledge_dynamics.cc  knowledge_dynamics.hh  struct_reader.hh  unexepack.cc  unexepack.hh  unlzexe.cc  unlzexe.hh  unpklite.cc  unpklite.hh
src/formats/sound/: sound.cc
src/gui/: CMakeLists.txt  providers_properties_dlg.hpp
src/libvfs/: CMakeLists.txt  extractor_visitor.hpp  for_each.cpp  fs_file.hpp  fs_object.hpp  inode_defs.cpp  print_visitor.hpp  visitor.cpp  visitor.hpp
src/provider/: CMakeLists.txt  vfs_registry.cc
src/provider/physfs/: data_loader.cc  directory.cc
src/provider/vfs/: directory.cc  file_system.cc  graph.cc  graph.hh
src/shell/: CMakeLists.txt  eval.cc  eval.hh  functions.cc  functions.hh  main.cc
src/unittest/: CMakeLists.txt  main.cc
src/unittest/archive/: byte_order_test.cc
src/unittest/bsw/: string_constant_test.cc  string_tokenizer_test.cc  string_utils_test.cc
src/unittest/export/: xml_writer_test.cc
src/utils/: CMakeLists.txt  ccmap.cc  ega_reader.cc  iff.cc  load_pic.cc  mz_explode.cc  te-cli.cc
src/westwood/: CMakeLists.txt  fat.cpp  fat_entry.cpp  westwood_api.hpp
src/westwood/demos/: CMakeLists.txt
trunk/: CMakeLists.txt  config.h.in
trunk/abl/: exception.hpp  export_def.h
trunk/abl/date_time/: time_zone.cpp
trunk/abl/fs/: directory_iterator.cpp  file.cpp  glob.hpp
trunk/abl/string/: text_encoding.hpp  unicode_converter.hpp  utf8_string.cpp
trunk/abl/unicode/: unicode_converter.c
trunk/cmake/: build.cmake  compiler.cmake  nowarn.cmake  package.cmake  revision_info.cmake
trunk/config/: te_config.h.in
trunk/src/abl/: CMakeLists.txt  abl_export.h  atomic_counter.hpp  byte_order.hpp  dynamic_library.cpp  dynamic_library.hpp  dynamic_loader.cpp  dynamic_loader.hpp  environment.cpp  environment.hpp  export_def.h  mutex.cpp  mutex.hpp  null_mutex.cpp  null_mutex.hpp  number_formatter.hpp  number_parser.cpp  number_parser.hpp  platform.h  throw_spec.hpp
trunk/src/archive/: CMakeLists.txt  abstract_archive.cpp  abstract_archive.hpp  abstract_file.cpp  abstract_file.hpp  abstract_files_visitor.cpp  abstract_files_visitor.hpp  archive.h  archive_export.h  c_archive_adaptor.cpp  c_archive_adaptor.hpp
trunk/src/bsw/: CMakeLists.txt  byte_order.hpp  macros.hpp  object_manager.cpp  object_manager.hpp  proper_export.h  safe_cast.hpp
trunk/src/demos/: CMakeLists.txt  dune2_dump.cpp  extractor.cpp
trunk/src/gff/: iff.hpp
trunk/src/gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  providers_loader_dlg.cpp  providers_properties_dlg.cpp  providers_registry.hpp  settings.cpp  settings.hpp  specify_providers_dlg.hpp
trunk/src/libprovider/: CMakeLists.txt  abstract_provider.cpp  abstract_provider.hpp  archive_reader.cpp  archive_reader.hpp  resource.cpp  resource.hpp  simple_dir.cpp  simple_dir.hpp
trunk/src/libvfs/: CMakeLists.txt  dump_visitor.cpp  dump_visitor.hpp  extractor_visitor.hpp  for_each.hpp  fs.cpp  fs.hpp  fs_dir.cpp  fs_dir.hpp  fs_file.cpp  fs_file.hpp  fs_object.cpp  fs_object.hpp  inode_defs.hpp  print_visitor.hpp  register.hpp  visitor.hpp
trunk/src/pict/: CMakeLists.txt  abstract_picture.hpp  allocator.cpp  allocator.hpp  bpp.hpp  pcxh  rgb.hpp
trunk/src/platform/: CMakeLists.txt  config.h  fixme.h  macros.h  os.c  os.h  os.hpp  os_error.c  os_error.h  platform_export.h  proper_export.h  static_assert.h  (+1 more)
(+2392 files in other folders)
